rbdl/tests/not_str.stderr
error: expected string literal
 --> $DIR/not_str.rs:3:12
  |
3 | rbdl_file!(2 + 2);
  |            ^
