rbdl/tests/not_str.rs
use rbdl::rbdl_file;

rbdl_file!(2 + 2);

fn main() {

}